--- a/sistema-marcaje-backend/src/main/resources/application.properties
+++ b/sistema-marcaje-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=sistema-marcaje-backend
-spring.datasource.url=jdbc:mysql://localhost:3306/sistema_examenes
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://3.133.145.220:3306/sistema_marcaje
+spring.datasource.username=db_dw
+spring.datasource.password=Umg2024+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
